<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/rmdp_8"
        android:paddingBottom="@dimen/rmdp_24"
        android:layout_marginTop="@dimen/rmdp_8"
        android:layout_height="wrap_content"
        tools:context=".RateFragment">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/rmdp_56"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center"
            android:id="@+id/rateHeader"
            android:textSize="20sp"
            android:fontFamily="@font/vazir_bold"
            android:textColor="@color/mcolorLightGray"
            android:text="@string/mrate_this_app"
            android:background="@color/mcolorDialogHeader"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rateMessage"
            android:textColor="@color/mcolorDarkBlue"
            android:layout_margin="@dimen/rmdp_16"
            android:fontFamily="@font/vazir"
            android:text="@string/mrate_message"
            app:layout_constraintTop_toBottomOf="@id/rateHeader"/>


    <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/rateMessage"
            android:layout_marginTop="@dimen/rmdp_16"
            android:fontFamily="@font/vazir"
            android:textColor="@color/mcolorMidGray"
            android:id="@+id/rateNegative"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/mno_thanks"/>

    <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/rateMessage"
            android:layout_marginTop="@dimen/rmdp_16"
            android:fontFamily="@font/vazir"
            android:textColor="@color/mcolorMidGreen"
            android:text="@string/mrate_now"
            android:id="@+id/ratePositive"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/rateNegative"/>

    <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rateCancel"
            app:layout_constraintTop_toBottomOf="@id/rateMessage"
            android:layout_marginTop="@dimen/rmdp_16"
            android:fontFamily="@font/vazir"
            android:text="@string/mmaybe_later"
            android:layout_marginBottom="?actionBarSize"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/rateNegative"
            android:textColor="@color/mcolorMidGray"/>
</androidx.constraintlayout.widget.ConstraintLayout>